fixing package json

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "file-uploadapp",
+  "name": "read-commandine",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+   
   },
   "dependencies": {
   }
